-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.3
-
-
8b261a2ad (dev), 2d6788d6e (6.8), 1cfafbfd8 (6.7)
MDI subwindow icons have low resolution and an unattractive appearance when the window is displayed in maximized mode.
To reproduce the issue, run the attached example project.
| For Gerrit Dashboard: QTBUG-127288 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 583568,4 | Widgets/QMdiSubWindow: fix high-dpi painting of control buttons | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 584386,2 | Widgets/QMdiSubWindow: fix high-dpi painting of control buttons | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 584444,2 | Widgets/QMdiSubWindow: fix high-dpi painting of control buttons | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |